kubernetes/deployment-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <<YAML_SERVICE_NAME>>
  namespace: <<YAML_NAMESPACE>>
spec: 
  replicas: 1 #Always one
  selector:
    matchLabels:
      app: <<YAML_SERVICE_NAME>>
  strategy:
    type: Recreate 
  template: 
    metadata: 
      labels: 
        app: <<YAML_SERVICE_NAME>>
    spec: 
      containers:
        - name: mysql #TODO
          image: <<YAML_DATABASE_DOCKER_IMAGE_NAME_AND_TAG>>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: <<YAML_CONTAINER_PORT>>
              name: mysql    
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql    
            - name: <<YAML_DB_SCHEMA_NAME>>-dbcreation-script
              mountPath: /docker-entrypoint-initdb.d
            - name: <<YAML_DB_SCHEMA_NAME>>-db-auth-config-script
              mountPath: /etc/mysql/conf.d/default_auth.cnf
              subPath: default_auth
      volumes: 
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: ebs-mysql-pv-claim-<<YAML_NUMERIC_HASH_OF_HOST>>
        - name: <<YAML_DB_SCHEMA_NAME>>-dbcreation-script
          configMap:
            name: <<YAML_DB_SCHEMA_NAME>>-dbcreation-script
        - name: <<YAML_DB_SCHEMA_NAME>>-db-auth-config-script
          configMap:
            name: <<YAML_DB_SCHEMA_NAME>>-db-auth-config-script
---
