kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <<YAML_SERVICE_NAME>>
  namespace: <<YAML_NAMESPACE>>
spec:
  replicas: <<YAML_DEPLOYMENT_NUMBER_OF_REPLICAS>>
  selector:
    matchLabels:
      app: <<YAML_SERVICE_NAME>>
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: <<YAML_SERVICE_NAME>>
    spec:
      containers:
        - name: <<YAML_CONTAINER_NAME>>
          image: <<YAML_DOCKER_IMAGE_NAME_AND_TAG>>
          imagePullPolicy: Always
          ports:
            - containerPort: <<YAML_CONTAINER_PORT>>
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl 'https://<<YAML_HOST>>/api/healthcheck/status?probe=readiness&application=<<YAML_SERVICE_NAME>>'|grep STATUS-OK || curl 'http://localhost:<<YAML_CONTAINER_PORT>>/api/healthcheck/status?probe=readiness&application=<<YAML_SERVICE_NAME>>'|grep STATUS-OK
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 1
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl 'https://<<YAML_HOST>>/api/healthcheck/status?probe=liveness&application=<<YAML_SERVICE_NAME>>'|grep STATUS-OK || curl 'http://localhost:<<YAML_CONTAINER_PORT>>/api/healthcheck/status?probe=liveness&application=<<YAML_SERVICE_NAME>>'|grep STATUS-OK
            initialDelaySeconds: 3600
            periodSeconds: 60
            failureThreshold: 15
      imagePullSecrets:
        - name: dockerhub-secret
---
