kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: <<YAML_NAMESPACE>>
  name: <<YAML_SERVICE_NAME>>
spec:
  type: NodePort
  selector:
    app: <<YAML_SERVICE_NAME>>
  ports:
    - port: <<YAML_SERVICE_PORT>>
      targetPort: <<YAML_CONTAINER_PORT>>
---
